# lidar-test-task

./: 2017-04-11_-_14-06-06_4_raw.csv  2017-04-11_-_14-56-03_171_raw.csv  2017-04-12_-_11-19-39_6_raw.csv  CMakeLists.txt  README.md  helper.cpp  helper.h  main.cpp  noise.csv  transformer.cpp  transformer.h  Задание_С++.docx
